# rpi4temp

./: CMakeLists.txt  DEV_ENVIRONMENT.md  Dockerfile  README.md  b.sh  bDocker.sh  cb.sh  cba.sh  sh.sh  startDocker.sh  t.sh
.devcontainer/: Dockerfile  devcontainer.json
components/: CMakeLists.txt
components/common_cfg/: CMakeLists.txt  lwipopts.h
components/main/: CMakeLists.txt
components/main/src/: main.cpp  pinMux.cpp  pinMux.h
components/max31865/inc/: max31865.h  max31865_reg.h
components/max31865/src/: max31865.cpp  max31865_conv.cpp
components/max31865/test/: configRegister_test.cpp  faultStatus_test.cpp  faultThresholdRegister_test.cpp  max31865_test.cpp  rtdRegister.cpp
components/spi/inc/: spi.h
components/spi/src/: spi.cpp
components/spi/test/: spiData_test.cpp  spi_test.cpp
components/tempProvider/: CMakeLists.txt  tempProvider.c  tempProvider.h
components/tempSens/: CMakeLists.txt
components/tempSens/inc/: tempSens.h
components/template/inc/: template.h
components/template/src/: template.cpp
components/template/test/: template_test.cpp
components/udp_beacon/: CMakeLists.txt  udp_beacon.c  udp_beacon.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
doc/: .gitignore  CMakeLists.txt
doc/source/: index.rst  wifi.rst
main/: CMakeLists.txt
main/src/: FreeRTOSConfig.h  main.cpp  pinMux.cpp
max31865/: CMakeLists.txt
max31865/inc/: max31865.h  max31865_conv.h
max31865/src/: max31865.cpp  max31865_conv.cpp  max31865_reg.cpp
max31865/test/: configRegister_test.cpp  faultStatus_test.cpp  faultThresholdRegister_test.cpp  rtdRegister.cpp
pinMux/: CMakeLists.txt
pinMux/inc/: pinMux.h
pinMux/src/: pinMux.cpp
scripts/: startDocker.sh
spi/: CMakeLists.txt
spi/inc/: gpio.h  gpioMock.h  spi.h
spi/src/: gpio.cpp  gpio_test.c  spi.cpp
tempSens/inc/: tempSens.h
tempSens/src/: tempSens.cpp
template/: CMakeLists.txt
template/inc/: template.h
template/src/: template.cpp
template/test/: template_test.cpp
